crates/test-files/fixtures/compile_errors/bad_ingot/src/foo.fe
struct Foo:
    my_num: u256